[package]
name = "bug-status"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4.0"
reqwest = {version="0.10.8", features = ["blocking", "json"] }
serde = "1.0.115"
serde_json = "1.0.57"