[package]
name = "bug-status"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
indicatif = "0.16.1"
lazy_static = "1.4.0"
rayon = "1.5.0"
reqwest = {version="0.11.3", features = ["blocking", "json"] }
serde = "1.0.115"
serde_json = "1.0.57"

[profile.dev.package.backtrace]
opt-level = 3

[[bin]]
name = "printing"
path = "src/printing.rs"

[[bin]]
name = "proton"
path = "src/proton.rs"
